Edit waiting application for leave by person who applied it